--- a/fbstyles.css
+++ b/fbstyles.css
@@ -1664,6 +1664,7 @@ a.tab.active {
     text-align: right;
     font-weight: 700;
     margin-top: 70px;
+    text-align: center;
 }
 
 .fb-pagination ul {
