Added media queries for responsiveness
Added:
1. Don't display news image below 739px
2. Change layout of tabs below 581px to 47% width for grid layout

--- a/fbstyles.css
+++ b/fbstyles.css
@@ -2491,3 +2491,23 @@ form.clearfix span.twitter-typeahead {
         right: 0!important
     }
 }
+@media (max-width:739px) {
+  .fb-result__image {display:none;}
+  .fb-result__info.with-image {width:100%;}
+}
+
+@media (max-width:581px) {
+  .inline-tabs li {
+    display: inline-block;
+    margin-bottom: .5em;
+    text-align: center;
+    padding: 0 3px;
+    width: 47%;
+  }
+
+  .inline-tabs li a {
+    padding: 12px 12px;
+  }
+  .inline-tabs {display:inline-block;text-align:center;margin:0 0 10px;width:100%}
+  .fb-message {padding-bottom:0;}
+}
