--- a/fbstyles.css
+++ b/fbstyles.css
@@ -56,6 +56,7 @@ a:active, a:focus, a:hover {
 
 .fb-btn, a.fb-btn {
     display: inline-block;
+    font-weight: 700;
     padding: 12px;
     margin: 1em 0 0;
     font-size: 1em;
@@ -2473,6 +2474,18 @@ a.tab.active {
 
 form.clearfix span.twitter-typeahead {
     width: 90%
+}
+
+@media (max-width:640px) {
+    form.clearfix span.twitter-typeahead {
+        width: 75%
+    }
+}
+
+@media (max-width:640px) {
+    .fb-searchbar .fb-btn {
+        width: 25%;
+    }
 }
 
 @media (min-width:640px) {
